pcrs/resources/less/new-visualizer.less
@border-color: #DDDDDD;
@address-width: 45%;
@values-width: 55%;
@cell-width: 13.75%;
@cell-height: 37px;
@heading-height: 39px;

hr {
    width: 100%;
    margin-top: 0px;
}

.title {
    font-size: 20px;
    font-weight: bold;
    text-align: center;
    margin-bottom: 5px;
}

.visualizer-section {
    margin: 5px;
    padding: 10px;
    vertical-align: top;
    display: inline-block;
    overflow-y: auto;
    max-height: 800px;
}

.code-window-section {
    .visualizer-section;
    width: 50%;
    min-width: 740px;
    margin: 0px;
}

.name-type-section {
    .visualizer-section;
    min-width: 328px;
    width: 20%;
}

.memory-map-section {
    .visualizer-section;
    min-width: 412px;
    width: 26%;
}

.memory-map-section td {
    font-family: monospace;
}

.memory-map-section
    td.memory-map-cell,
    td.memory-map-address,
    td.address-width,
    th {

    height: @cell-height;
}

.name-type-section td {
    font-family: monospace;
}

#preview-code {
    max-height: 500px;
    overflow: auto;
}

.std-out-section {
    margin: 0px;
    width: 100%;
    min-width: 25em;
}

#std-out-textbox {
    font-family: monospace;
    overflow: auto;
    white-space: pre-wrap;
    border: 1px solid black;
    margin: 25px 0px 25px 0px;
    width: 100%;
    min-width: inherit;
    height: 8em;
    scroll: auto;
    padding: 5px 1em 5px 1em;
}

.std_err {
    color: red;
}

.name-type-section th[colspan="2"],
.memory-map-section th[colspan="5"] {
    font-size: 12pt;
}

.visualizer-section-heading {
    padding-left: 5px;
    padding-right: 5px;
    text-align: center;
}

div.memory-map-table-wrapper {
    width: 100%;
    position: relative;
    display: inline-block;
}

.memory-map-table {
    width: 100%;
    min-width: 100%;
    float: left;
    table-layout: fixed;
}

table.memory-map-cell-table {
    .memory-map-table;
    position: absolute;
    z-index: 0;
}

table.memory-map-label-table {
    .memory-map-table;
    position: relative;
    z-index: 1000;
}

.heading-height {
    height: @heading-height;
}

.address-width {
    padding-right: 0px;
    padding-left: 0px;
    width: @address-width;
}

.values-width {
    padding-left: 0px;
    width: @values-width;
}

.address-heading {
    text-align: right;
    padding-right: 0px;
    width: @address-width;
}

th.values-heading {
    padding-left: 0px;
    border-left: 2px solid @border-color;
    text-align: center;
    width: @values-width;
}

.hide-overflow {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

td.memory-map-address {
    .hide-overflow;
    text-align: right;
    vertical-align: middle;
    border-right: 2px solid @border-color;
    width: @address-width;
}

div.memory-map-table-wrapper td.memory-map-cell {
    .hide-overflow;
    text-align: center;
    width: @cell-width;
    min-width: @cell-width;
    max-width: @cell-width;
    vertical-align: middle;
    border: 1px solid @border-color;
}

table.memory-map-cell-table .memory-map-cell {
    border-left: none;
}

table.memory-map-cell-table .address-heading {
    border-right: none;
}

//.crouching-table
.hidden-cell {
    display: none;
    position: relative;
}

td.clear-cell {
    border-left: none;
    border-right: none;
}

td.right-edge-clear-cell {
    border-left: none;
}

td.top-row-clear-cell {
    border-bottom: 1px solid white;
}

td.middle-row-clear-cell {
    border-top: none;
    border-bottom: none;
}

td.bottom-row-clear-cell {
    border-top: none;
}

div.memory-map-table-wrapper td.dot-line {
    text-align: center;
    padding: 2px;
    line-height: 15px;
    height: 15px;
    margin-bottom: 1px;
}

.highlight {
    background-color: rgba(210,250,205, 0.5);
}

div.code-window-section span.cm-variable.highlight {
    .highlight;
    border: 1px solid grey;
    padding: 2px;
    margin-left: 1px;
    margin-right: 1px;
}

div.memory-map-table-wrapper td.main-highlight, tr.main-highlight {
    border: 2px double skyblue;
}

.minimizer {
    text-decoration: none;
    font-size: 15px;
    padding: 0px;
    margin-right: 5px;
    height: 100%;
    display: table;
    float: left;
}

a.minimizer {
    .minimizer;
}

a.small-minimizer {
    .minimizer;
    font-size: 12px;
}

.minimizer-span {
    display: table-cell;
    vertical-align: middle;
}

h3 .minimizer {
    // If someone can figure out a better way to vertically center this godforsaken, hellspawned anchor, please do it
    transform: translateY(21%);
}

